--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -35,7 +35,8 @@ nav .menu-container {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  z-index: 4; /* 
+  z-index: 4;
+  /* 
   margin-left: 90vw; */
 }
 
@@ -43,6 +44,7 @@ nav .menu-container div {
   text-transform: uppercase;
   font-size: 2rem;
   text-shadow: 0px 0.1rem var(--mainColor);
+  color: black;
 }
 nav .menu-container img {
   height: 4rem;
