--- a/src/index.css
+++ b/src/index.css
@@ -46,21 +46,22 @@ html {
 }
 
 .App {
+  /* 
   text-align: center;
-  background-image: url("./images/naslovnica.png");
-  background-color: black; /* Set background to black */
-  background-size: contain; /* Keeps original image size */
+  background-image: url("./images/naslovnica.png"); */
+  background-color: black; /* Set background to black */ /* 
+  background-size: contain; /* Keeps original image size */ /* 
   background-attachment: fixed;
   background-position: center center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 
-  /* Special Fix for iOS (Safari Only) */
+  /* Special Fix for iOS (Safari Only)
   @supports (-webkit-touch-callout: none) {
     background-attachment: fixed;
-    background-size: contain;
+    background-size: contain; 
   }
 
-  min-height: 100vh; /* Ensures the full viewport height is always covered */
+  min-height: 100vh; */ /* Ensures the full viewport height is always covered */
 }
 
 a {
