--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -8,13 +8,18 @@
   z-index: 10;
 
   transition: transform 0.3s ease;
+  font-family: var(--fontMain);
 }
 
 .hide-nav {
   transform: translateY(-100%);
   background-color: transparent;
 }
-
+@media screen and (max-width: 1000px) {
+  nav {
+    background-color: transparent;
+  }
+}
 nav {
   display: flex;
   z-index: 10;
@@ -36,15 +41,12 @@ nav .menu-container {
   justify-content: space-between;
   width: 100%;
   z-index: 4;
-  /* 
-  margin-left: 90vw; */
 }
 
 nav .menu-container div {
   text-transform: uppercase;
   font-size: 2rem;
   text-shadow: 0px 0.1rem var(--mainColor);
-  color: black;
 }
 nav .menu-container img {
   height: 4rem;
