--- a/src/components/PriceList/PriceList.css
+++ b/src/components/PriceList/PriceList.css
@@ -22,7 +22,7 @@
   font-size: 1.2rem;
   color: var(--white);
   margin: 10px 0 20px 0;
-  font-family: var(--fontMain);
+  font-family: var(--fontSecond);
   text-align: center;
 }
 
@@ -33,6 +33,7 @@
   gap: 10px; /* Spacing between buttons */
   max-width: 600px; /* Adjust as needed */
   margin: 2rem auto;
+  font-family: var(--fontSecond);
 }
 
 .period-button {
@@ -70,6 +71,7 @@
   overflow: hidden;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   border: 2px solid var(--secondaryColor);
+  font-family: var(--fontSecond);
 }
 
 .pricing-header {
@@ -119,6 +121,7 @@
   align-items: center;
   justify-content: center;
   z-index: 5;
+  font-family: var(--fontSecond);
 }
 
 .popup-content {
