--- a/src/components/Prednosti/Prednosti.css
+++ b/src/components/Prednosti/Prednosti.css
@@ -18,7 +18,9 @@ ol {
   padding-left: 5rem;
   padding-right: 0rem;
 }
-
+.prednosti-item li::marker {
+  font-weight: 900;
+}
 .prednosti-item:nth-child(even) {
   text-align: left; /* Align every second item to the left */
   padding-left: 0rem;
