--- a/src/components/Ponudba/Ponudba.css
+++ b/src/components/Ponudba/Ponudba.css
@@ -102,7 +102,7 @@
 .image-ponudba-1 {
   height: 505px; /* Take up full height of its parent */
   width: auto;
-  object-fit: contain; /* Ensures image scales properly */
+  object-fit: cover; /* Ensures image scales properly */
   flex-grow: 1;
   border: 4px solid var(--white);
   margin-left: 1rem;
