--- a/src/components/Dimenzije/Dimenzije.css
+++ b/src/components/Dimenzije/Dimenzije.css
@@ -63,12 +63,14 @@
   width: 100%;
   position: relative;
   bottom: 0%;
+  object-fit: cover;
+  border: 4px solid var(--white);
 }
 .column {
   flex-direction: column;
   height: 40vh;
 }
-.dimenzije-bigger {
+.dimenzije-bigger img {
   height: auto;
   width: 40%;
   margin-right: 1rem;
@@ -95,5 +97,12 @@
   }
   .dimenzije-bigger {
     width: 90%;
+  }
+  .dimenzije-bigger img {
+    height: auto;
+    width: 100%;
+    margin-right: 1rem;
+    object-fit: cover;
+    border: 4px solid var(--white);
   }
 }
