--- a/src/components/Dimenzije/Dimenzije.css
+++ b/src/components/Dimenzije/Dimenzije.css
@@ -17,7 +17,7 @@
   margin: 2rem auto;
   align-items: center;
   justify-content: center;
-  max-height: 100vh;
+  gap: 1rem;
 }
 .dimenzije-item ul {
   padding-top: 1rem;
@@ -57,7 +57,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  width: 60%;
+  width: 65%;
 }
 .dimenzije-divider img {
   width: 100%;
@@ -66,28 +66,26 @@
   object-fit: cover;
   border: 4px solid var(--white);
 }
-.column {
-  flex-direction: column;
-  height: 40vh;
+.dimenzije-image {
+  width: 35%;
+  height: 100%;
 }
-.dimenzije-bigger img {
+.dimenzije-image img {
+  width: 100%;
   height: auto;
-  width: 40%;
-  margin-right: 1rem;
+  object-fit: cover;
+  border: 4px solid var(--white);
+  bottom: 0%;
 }
 @media screen and (max-width: 1000px) {
-  .dimenzije-item img {
-    height: auto;
-    width: 100%;
-    margin-right: 0rem;
-    margin-bottom: 1rem;
-    overflow: hidden;
-    object-fit: contain;
+  .dimenzije-image {
+    width: 80%;
   }
+
   .dimenzije-divider {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
     width: 100%;
   }
   .dimenzije-divider img {
@@ -95,14 +93,8 @@
     position: relative;
     bottom: 0%;
   }
-  .dimenzije-bigger {
-    width: 90%;
-  }
-  .dimenzije-bigger img {
-    height: auto;
-    width: 100%;
-    margin-right: 1rem;
-    object-fit: cover;
-    border: 4px solid var(--white);
-  }
+}
+
+.dimenzije-text-divider {
+  text-align: center;
 }
