--- a/src/components/PriceList/PriceList.css
+++ b/src/components/PriceList/PriceList.css
@@ -194,3 +194,84 @@
     max-width: 100%;
   }
 }
+
+.middle {
+}
+/* .----------------------------------------------------------------- */
+/* Period Dropdown Styles */
+.period-dropdown {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  width: 200px;
+  margin: 0rem auto;
+  margin-bottom: 2rem;
+  font-family: var(--fontMain);
+}
+
+.period-dropdown-toggle {
+  width: 200px;
+  padding: 10px;
+  border-radius: 3px;
+  border: none;
+  background: var(--secondaryColor);
+  cursor: pointer;
+  color: white;
+  font-size: 1rem;
+  text-align: center;
+  transition: background 0.3s ease;
+}
+
+.period-dropdown-toggle:hover {
+  background: var(--secondaryColor);
+}
+
+.period-dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background: white;
+  border: 1px solid #ccc;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  padding: 0;
+  margin-top: 5px;
+  border-radius: 10px;
+  z-index: 10;
+  overflow: hidden;
+}
+
+.period-dropdown-menu li {
+  width: 100%;
+  padding: 10px;
+  cursor: pointer;
+  text-align: center;
+  transition: background 0.3s;
+}
+
+.period-dropdown-menu li:hover,
+.period-dropdown-menu .active {
+  background: #f0f0f0;
+}
+
+@media screen and (max-width: 1000px) {
+  .period-dropdown {
+    width: 150px;
+  }
+
+  .period-dropdown-toggle {
+    width: 150px;
+    font-size: 0.9rem;
+  }
+
+  .period-dropdown-menu {
+    width: 100%;
+  }
+
+  .period-dropdown-menu li {
+    padding: 8px;
+    font-size: 0.9rem;
+  }
+}
